fix detail page h1 spacing

--- a/src/media/css/detail/header.styl
+++ b/src/media/css/detail/header.styl
@@ -91,7 +91,9 @@
                 desktop_mega();
                 margin-bottom: 30px;
                 padding-top: 45px;
+                position: relative;
                 text-align: center;
+                top: 15px;
             }
             [itemprop="creator"] {
                 font-weight: 300;
